# RustifyAuth

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.MD  area_for_improvement.txt  client.csr  clientNote.txt  client_cert.pem  client_key.pem  custom_cert.pem  custom_cert.srl  custom_key.pem  introspection.txt  note.txt  redis_note.txt
.github/: labeler.yml
.github/workflows/: auto-merge.yml  close-stale-issues.yml  feature-ci.yml  label.yml  pr-checks.yml  release.yml  welcome.yml
authentication/: mock.rs
migrations/: 20241025173219_create_tables.sql
src/: auth_middleware.rs  authentication.rs  config.rs  error.rs  jwt.rs  lib.rs  private_key.pem  public_key.pem
src/auth/: mock.rs  mod.rs  rbac.rs
src/core/: authorization.rs  client_credentials.rs  device_flow.rs  extension_grants.rs  grants.rs  mod.rs  oidc_providers.rs  pkce.rs  scopes.rs  token.rs  types.rs
src/endpoints/: authorize.rs  authorize_user.rs  client_credentials.rs  delete.rs  introspection.rs  login.rs  mod.rs  oidc_login.rs  register.rs  revoke.rs  token.rs  update.rs
src/examples/: actix_integration.rs  authentication.rs  rocket_integration.rs  warp_integration.rs
src/oidc/: claims.rs  discovery.rs  jwks.rs  mod.rs
src/routes/: auth.rs  device_flow.rs  mod.rs  users.rs
src/security/: access_control.rs  csrf.rs  encryption.rs  mfa.rs  mod.rs  oidc_security.rs  pkce.rs  rate_limit.rs  tls.rs
src/storage/: backend.rs  client.rs  memory.rs  mock.rs  mod.rs  postgres.rs  redis.rs  sql.rs
src/tests/: authorization_flow_test.rs  integration_test_introspection.rs  integration_tests.rs  jwt_tests.rs  mfa_tests.rs  oidc_integration_tests.rs
tests/: oidc_integration_tests.rs  postgres_integration.rs
