[package]
name = "rustify-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-web-httpauth = "0.8.2"
async-trait = "0.1.82"
base64 = "0.22.1"
constant_time_eq = "0.3.1"
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
otpauth = "0.5.1"
pqcrypto-dilithium = "0.5.0"
pqcrypto-falcon = "0.3.0"
rand = "0.8.5"
redis = "0.22.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = ["postgres"] }
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
oqs = { git = "https://github.com/open-quantum-safe/liboqs-rust" }
pqcrypto-traits = "0.3.5"
webpki-roots = "0.26.6"
rustls-pemfile = "2.1.3"
rustls = "0.20.9"
zstd-safe = "7.2.1"
pem = "3.0.4"
uuid = { version = "1.10.0", features = ["v4"] }
dashmap = "6.1.0"
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
bcrypt = "0.15.1"
wiremock = "0.6.2"
reqwest = { version= "0.12.8", features = ["json"] }
hex = "0.4.3"
rsa = "0.9.6"
actix-rt = "2.10.0"
urlencoding = "2.1.3"
actix-service = "2.0.2"
futures = "0.3.31"
actix-redis = "0.13.1"

[dev-dependencies]
serial_test = "3.1.1"
httpmock = "0.6"
